# pig-hole

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs  resources.rs  systems.rs
client/src/systems/: events.rs  init.rs  sync.rs  tick.rs
matchmaker/: Cargo.toml  Rocket.toml
matchmaker-models/: Cargo.toml
matchmaker-models/src/: lib.rs  server_api.rs
matchmaker/src/: client_api.rs  headers.rs  key_generation.rs  main.rs  server_connection.rs
pig-hole/: Cargo.toml  index.html
pig-hole/.cargo/: config.toml
pig-hole/src/: actions.rs  audio.rs  lib.rs  loading.rs  main.rs  networking.rs  player.rs
pig-hole/src/loading/: board_assets.rs
pig-hole/src/menu/: browse_lobbies.rs  create_lobby.rs  main_menu.rs  state.rs
pig-hole/src/networking/: http.rs
server/: Cargo.toml
server/src/: main.rs  resources.rs  shared.rs  systems.rs
server/src/shared/: config.rs  protocol.rs
server/src/shared/protocol/: auth.rs  entity_assignment.rs
server/src/systems/: events.rs  init.rs  tick.rs
shared/: Cargo.toml
shared-models/: Cargo.toml
shared-models/src/: client_api.rs  lib.rs
shared/src/protocol/: auth.rs  entity_assignment.rs
src/: actions.rs  audio.rs  board.rs  dev.rs  ingame_menu.rs  lib.rs  loading.rs  main.rs  menu.rs  networking.rs  pig_collection.rs  player.rs  player_creation.rs  turn.rs
src/loading/: menu_assets.rs
src/menu/: browse_lobbies.rs  create_lobby.rs  joining_lobby.rs  main_menu.rs  state.rs
src/menu/browse_lobbies/: waiting_for_players.rs
