[package]
name = "pig-hole" # ToDo
version = "0.1.0"
publish = false
authors = [ "Jan Hohenheim <jan@hohenheim.ch>" ]
edition = "2021"

[features]
default = [
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/x11",
    "bevy_kira_audio/ogg"
]

dev = [
    "bevy/dynamic",
    "bevy-inspector-egui",
    "bevy_editor_pls"
]

[dependencies]
bevy = { version = "0.7", default-features = false }
bevy_kira_audio = { version = "0.9" }
bevy_asset_loader = { version = "0.10" }
bevy-inspector-egui = { version = "0.11", optional = true }
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls", rev = "63872f9d0ecbe94be1a3ebe4087797154f3bb00e", optional = true }
bevy_prototype_lyon = "0.5.0"
rand = "0.8.3"
bevy_renet = "0.0.3"
bevy_egui = "0.14.0"
egui_extras = "0.18.0"
renet = "0.0.8"
serde = "1.0.139"
bincode = "1.3.3"
reqwest = { version = "0.11.11", features = [ "json" ] }
bytes = "1.1.0"
shared-models = { path = "../shared-models" }
async-channel = "1.6.1"

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.25", features = [ "x11" ] }

[build-dependencies]
embed-resource = "1.4"

