[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
naia-shared = "0.10.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
naia-bevy-server = { version = "0.10.1", features = ["use-webrtc"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
naia-bevy-server = { version = "0.10.1", features = ["use-udp"] }
